# voxel-game

./: .gitignore  .gitmodules  CMakeLists.txt  package.bat
engine/: asset_cache.cpp  asset_cache.h  contact_listener.cpp  contact_listener.h  debug_ui.cpp  debug_ui.h  lighting_ubo.h  obj_loader.h  physics_world.cpp  physics_world.h  scene_loader.cpp  scene_loader.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_vertex.h
levels/: lab.json  testSave.json
shaders/: shader.frag  shader.vert
src/: camera.h  character.cpp  character.h  collision_zone.h  game.cpp  game.h  game_object.h  input_state.h  palette_entry.h  processInput.cpp  processInput.h  projectile.h  projectile_manager.cpp  projectile_manager.h  visual_object.h
